# silverwing_simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  flake.nix  result  run.sh
src/: silverwing_simulator.cpp
